tests/ui/privacy/private-in-public-assoc-ty.stderr
error[E0446]: private type `Priv` in public interface
  --> $DIR/private-in-public-assoc-ty.rs:17:9
   |
LL |     struct Priv;
   |     ----------- `Priv` declared as private
...
LL |         type A = Priv;
   |         ^^^^^^ can't leak private type

error[E0446]: private trait `PrivTr` in public interface
  --> $DIR/private-in-public-assoc-ty.rs:24:9
   |
LL |     trait PrivTr {}
   |     ------------ `PrivTr` declared as private
...
LL |         type Alias1: PrivTr;
   |         ^^^^^^^^^^^^^^^^^^^ can't leak private trait

error[E0446]: private type `Priv` in public interface
  --> $DIR/private-in-public-assoc-ty.rs:26:9
   |
LL |     struct Priv;
   |     ----------- `Priv` declared as private
...
LL |         type Alias2: PubTrAux1<Priv> = u8;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't leak private type

error[E0446]: private type `Priv` in public interface
  --> $DIR/private-in-public-assoc-ty.rs:28:9
   |
LL |     struct Priv;
   |     ----------- `Priv` declared as private
...
LL |         type Alias3: PubTrAux2<A = Priv> = u8;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't leak private type

error[E0446]: private type `Priv` in public interface
  --> $DIR/private-in-public-assoc-ty.rs:31:9
   |
LL |     struct Priv;
   |     ----------- `Priv` declared as private
...
LL |         type Alias4 = Priv;
   |         ^^^^^^^^^^^ can't leak private type

error[E0446]: private type `Priv` in public interface
  --> $DIR/private-in-public-assoc-ty.rs:38:9
   |
LL |     struct Priv;
   |     ----------- `Priv` declared as private
...
LL |         type Alias1 = Priv;
   |         ^^^^^^^^^^^ can't leak private type

error[E0446]: private trait `PrivTr` in public interface
  --> $DIR/private-in-public-assoc-ty.rs:41:9
   |
LL |     trait PrivTr {}
   |     ------------ `PrivTr` declared as private
...
LL |         type Exist = impl PrivTr;
   |         ^^^^^^^^^^ can't leak private trait

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0446`.
